<resources>
    <string name="app_name">PPnPA</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Podstawy programowania na platformę Android</string>
    <string name="nav_header_subtitle">Stanisław Mól</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Notatka</string>
    <string name="menu_reminder">Przypominajka</string>
    <string name="menu_phone_book">Książka telefoniczna</string>
    <string name="new_note">Nowa Notatka</string>
    <string name="note">Notatka</string>
    <string name="snack_bar_undo">Cofnij</string>
    <string name="snack_bar_text">Notatka usunięta</string>
    <string name="title">Tytuł</string>
    <string name="date">Data</string>
    <string name="desc_error">Coś poszło nie tak…</string>
    <string name="wrong_note_title">Niepoprawny tytuł notatki!</string>
    <string name="save_note">Zapisano notatkę</string>
    <string name="was_deleted">została trwale usunięta!</string>
    <string name="note_exist">Notatka z podanym tytułem już istnieje!</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="configure">Configure</string>
    <string name="add_widget">Add widget</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="delete">Usuń</string>
    <string name="edit">Edytuj</string>
    <string name="avatar">Avatar</string>
    <string name="first_name">Imię</string>
    <string name="last_name">Nazwisko</string>
    <string name="number">Numer</string>
    <string name="email">Email</string>
    <string name="gender">Płeć</string>
    <string name="save">Zapisz</string>
    <string name="new_contact_validation">Proszę wypełnić formularz!</string>
    <string name="undefined">Nieokreślone</string>
    <string name="woman">Kobieta</string>
    <string name="man">Mężczyzna</string>
    <string name="sort">Sortuj</string>
    <string name="call">Zadźwoń</string>
    <string name="multimedia_center">Centrum Multimedialne</string>
    <string name="picture">Zdjęcie</string>
    <string name="sketchbook">Szkicownik</string>
    <string name="music_player">Odtwarzacz muzyki</string>
    <string name="website">Strona internetowa</string>
    <string name="something_goes_wrong">Coś poszło nie tak!</string>
</resources>