<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_note">

    <fragment
        android:id="@+id/nav_note"
        android:name="com.example.podstawyprogramowanianaplatformandroid.ui.note.NoteFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_note">
        <action
            android:id="@+id/action_nav_note_to_nav_new_note"
            app:destination="@id/nav_new_note"
            app:enterAnim="@anim/fragment_open_enter"
            app:exitAnim="@anim/fragment_open_exit"
            app:launchSingleTop="true"
            app:popEnterAnim="@anim/fragment_close_enter"
            app:popExitAnim="@anim/fragment_close_exit"
            app:popUpTo="@id/nav_note" />
    </fragment>

    <fragment
        android:id="@+id/nav_reminder"
        android:name="com.example.podstawyprogramowanianaplatformandroid.ui.reminder.ReminderFragment"
        android:label="@string/menu_reminder"
        tools:layout="@layout/fragment_reminder">
        <action
            android:id="@+id/action_nav_reminder_to_newReminderFragment"
            app:destination="@id/newReminderFragment"
            app:enterAnim="@anim/fragment_open_enter"
            app:exitAnim="@anim/fragment_open_exit"
            app:popEnterAnim="@anim/fragment_close_enter"
            app:popExitAnim="@anim/fragment_close_exit" />
    </fragment>

    <fragment
        android:id="@+id/nav_phone_book"
        android:name="com.example.podstawyprogramowanianaplatformandroid.ui.phonebook.PhoneBookFragment"
        android:label="@string/menu_phone_book"
        tools:layout="@layout/fragment_phone_book">
        <action
            android:id="@+id/action_nav_phone_book_to_nav_new_phone_book"
            app:destination="@id/nav_new_phone_book"
            app:enterAnim="@anim/fragment_open_enter"
            app:exitAnim="@anim/fragment_open_exit"
            app:launchSingleTop="true"
            app:popEnterAnim="@anim/fragment_close_enter"
            app:popExitAnim="@anim/fragment_close_exit"
            app:popUpTo="@id/nav_phone_book" />
        <action
            android:id="@+id/action_nav_phone_book_to_nav_phone_book_details"
            app:destination="@id/nav_phone_book_details"
            app:enterAnim="@anim/fragment_open_enter"
            app:exitAnim="@anim/fragment_open_exit"
            app:launchSingleTop="true"
            app:popEnterAnim="@anim/fragment_close_enter"
            app:popExitAnim="@anim/fragment_close_exit"
            app:popUpTo="@id/nav_phone_book" />
    </fragment>
    <fragment
        android:id="@+id/nav_new_note"
        android:name="com.example.podstawyprogramowanianaplatformandroid.ui.newnote.NewNoteFragment"
        android:label="@string/new_note"
        tools:layout="@layout/fragment_new_note">
        <action
            android:id="@+id/action_nav_new_note_to_nav_note"
            app:destination="@id/nav_note"
            app:enterAnim="@anim/fragment_open_enter"
            app:exitAnim="@anim/fragment_open_exit"
            app:popEnterAnim="@anim/fragment_close_enter"
            app:popExitAnim="@anim/fragment_close_exit"
            app:popUpTo="@id/mobile_navigation" />
    </fragment>
    <fragment
        android:id="@+id/newReminderFragment"
        android:name="com.example.podstawyprogramowanianaplatformandroid.ui.newreminder.NewReminderFragment"
        android:label="@string/menu_reminder"
        tools:layout="@layout/fragment_new_reminder">
        <action
            android:id="@+id/action_newReminderFragment_to_nav_reminder"
            app:destination="@id/nav_reminder"
            app:enterAnim="@anim/fragment_open_enter"
            app:exitAnim="@anim/fragment_open_exit"
            app:launchSingleTop="true"
            app:popEnterAnim="@anim/fragment_close_enter"
            app:popExitAnim="@anim/fragment_close_exit"
            app:popUpTo="@id/nav_reminder" />
    </fragment>
    <fragment
        android:id="@+id/nav_new_phone_book"
        android:name="com.example.podstawyprogramowanianaplatformandroid.ui.newphonebook.NewPhoneBookFragment"
        android:label="Nowy Kontakt"
        tools:layout="@layout/fragment_new_phone_book">
        <action
            android:id="@+id/action_nav_new_phone_book_to_nav_phone_book"
            app:destination="@id/nav_phone_book"
            app:enterAnim="@anim/fragment_open_enter"
            app:exitAnim="@anim/fragment_open_exit"
            app:popEnterAnim="@anim/fragment_close_enter"
            app:popExitAnim="@anim/fragment_close_exit"
            app:popUpTo="@id/mobile_navigation" />
    </fragment>
    <fragment
        android:id="@+id/nav_phone_book_details"
        android:name="com.example.podstawyprogramowanianaplatformandroid.ui.phonebookdetails.PhoneBookDetailsFragment"
        android:label="Szczegóły">
        <action
            android:id="@+id/action_nav_phone_book_details_to_nav_phone_book"
            app:destination="@id/nav_phone_book"
            app:enterAnim="@anim/fragment_open_enter"
            app:exitAnim="@anim/fragment_open_exit"
            app:popEnterAnim="@anim/fragment_close_enter"
            app:popExitAnim="@anim/fragment_close_exit"
            app:popUpTo="@id/mobile_navigation" />
    </fragment>
    <fragment
        android:id="@+id/nav_multimedia_center"
        android:name="com.example.podstawyprogramowanianaplatformandroid.ui.multimediacenter.MultimediaCenterFragment"
        android:label="Centrum multimedialne"
        tools:layout="@layout/fragment_multimedia_center">
        <action
            android:id="@+id/action_nav_multimedia_center_to_nav_website"
            app:destination="@id/nav_website"
            app:enterAnim="@anim/fragment_open_enter"
            app:exitAnim="@anim/fragment_open_exit"
            app:launchSingleTop="true"
            app:popEnterAnim="@anim/fragment_close_enter"
            app:popExitAnim="@anim/fragment_close_exit"
            app:popUpTo="@id/nav_multimedia_center" />
        <action
            android:id="@+id/action_nav_multimedia_center_to_sketchbookFragment"
            app:destination="@id/sketchbookFragment"
            app:enterAnim="@anim/fragment_open_enter"
            app:exitAnim="@anim/fragment_open_exit"
            app:launchSingleTop="true"
            app:popEnterAnim="@anim/fragment_close_enter"
            app:popExitAnim="@anim/fragment_close_exit"
            app:popUpTo="@id/nav_multimedia_center" />
        <action
            android:id="@+id/action_nav_multimedia_center_to_cameraFragment"
            app:destination="@id/cameraFragment"
            app:enterAnim="@anim/fragment_open_enter"
            app:exitAnim="@anim/fragment_open_exit"
            app:launchSingleTop="true"
            app:popEnterAnim="@anim/fragment_close_enter"
            app:popExitAnim="@anim/fragment_close_exit"
            app:popUpTo="@id/nav_multimedia_center" />
    </fragment>
    <fragment
        android:id="@+id/nav_website"
        android:name="com.example.podstawyprogramowanianaplatformandroid.ui.multimediacenter.WebsiteFragment"
        android:label="@string/website"
        tools:layout="@layout/fragment_website" />
    <fragment
        android:id="@+id/sketchbookFragment"
        android:name="com.example.podstawyprogramowanianaplatformandroid.ui.multimediacenter.SketchbookFragment"
        android:label="@string/sketchbook" />
    <fragment
        android:id="@+id/cameraFragment"
        android:name="com.example.podstawyprogramowanianaplatformandroid.ui.multimediacenter.CameraFragment"
        android:label="@string/picture" />
</navigation>