<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/colorPrimaryVariant"
    android:layout_height="match_parent"
    tools:context=".ui.multimediacenter.MultimediaCenterFragment">

    <android.widget.Button
        android:id="@+id/bt_sketchbook"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="16dp"
        android:background="@drawable/roundedbutton"
        android:backgroundTint="@color/colorPrimary"
        android:foreground="@drawable/ic__24_document"
        android:text="@string/sketchbook"
        app:layout_constraintBottom_toTopOf="@+id/gl_horizontal_3"
        app:layout_constraintEnd_toStartOf="@+id/gl_vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/gl_horizontal_4"
        tools:ignore="ButtonStyle" />

    <android.widget.Button
        android:id="@+id/bt_picture"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="16dp"
        android:background="@drawable/roundedbutton"
        android:backgroundTint="@color/colorPrimary"
        android:foreground="@drawable/ic__08_camera"
        android:text="@string/picture"
        app:layout_constraintBottom_toTopOf="@+id/gl_horizontal_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/gl_vertical"
        app:layout_constraintTop_toTopOf="@+id/gl_horizontal_2" />

    <android.widget.Button
        android:id="@+id/bt_website"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="16dp"
        android:background="@drawable/roundedbutton"
        android:backgroundTint="@color/colorPrimary"
        android:foreground="@drawable/ic__25_blog"
        android:text="@string/website"
        app:layout_constraintBottom_toTopOf="@+id/gl_horizontal_1"
        app:layout_constraintEnd_toStartOf="@+id/gl_vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/gl_horizontal_2" />

    <android.widget.Button
        android:id="@+id/bt_music_player"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="16dp"
        android:background="@drawable/roundedbutton"
        android:backgroundTint="@color/colorPrimary"
        android:foreground="@drawable/ic__46_speaker"
        android:text="@string/music_player"
        app:layout_constraintBottom_toTopOf="@+id/gl_horizontal_3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/gl_vertical"
        app:layout_constraintTop_toTopOf="@+id/gl_horizontal_4" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_horizontal_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.45" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_horizontal_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.55" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_horizontal_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_horizontal_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.9" />

</androidx.constraintlayout.widget.ConstraintLayout>

